--- a/style.css
+++ b/style.css
@@ -1,32 +1,49 @@
 body {
-  margin: 20px auto;
-  text-align: center;
-}
-
-#tools {
   margin: 0;
-  padding: 10px;
-  display: flex;
-  justify-content:center;
-  align-items: center;
-  gap: 40px;
-  background-color: pink;
+  text-align: center;
+  background-color: rgb(255, 233, 237);
 }
 
-#container {
-  margin: 0 auto;
-  padding: 0;
+#header {
+  margin: 0;
+  padding: 6px;
   display: flex;
-  flex-wrap: wrap;
-  gap: 0px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.title {
+  font-size: larger;
+  font-weight: bold;
+}
+
+#outercontainer {
+  margin: 0;
+  padding: 20px;
+  height: 490px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  gap: 0;
+  flex: 0 0 auto;
+}
+
+#playground {
+  height: 480px;
+  width: 480px;
+  background-color: white;
   border: 1px solid black;
 }
 
-.grid {
-  border: 1px dotted gray;
+#features {
+  width: 20%;
   margin: 0;
-  padding: 0;
-  flex: 0 0 auto;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  gap: 40px;
+  background-color: pink;
 }
 
 /* Toggle for rainbow colors */
@@ -78,16 +95,16 @@ body {
   background-color: hotpink;
 }
   
-input {
+#togglerainbow {
   display: none;
 }
 
-input:checked ~ .switch:before {
+#togglerainbow:checked ~ .switch:before {
   border-color: hotpink;
   background-color: hotpink;
 }
   
-input:checked ~ .switch:after {
+#togglerainbow:checked ~ .switch:after {
   left: -1.1em;
   background-color: white;
 }
