--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
   background-color: rgb(255, 233, 237);
 }
 
+a {
+  text-decoration: none;
+  color: hotpink;
+}
+
 #header {
   margin: 0;
   padding: 6px;
@@ -16,11 +21,18 @@ body {
   font-size: larger;
   font-weight: bold;
 }
+#header p {
+  font-size: smaller;
+}
+
+#footer {
+  padding: 20px;
+}
 
 #outercontainer {
   margin: 0;
-  padding: 20px;
-  height: 490px;
+  padding: 10px;
+  height: 550px;
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
@@ -29,10 +41,21 @@ body {
 }
 
 #playground {
-  height: 480px;
-  width: 480px;
+/*  height: 540px;
+  width: 540px;*/
   background-color: white;
   border: 1px solid black;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 0;
+  flex-wrap: wrap;
+  flex: 0 0 auto;
+}
+.grid {
+  margin: 0;
+  padding: 0;
+  border: 1px dotted lightgray;
 }
 
 #features {
@@ -41,9 +64,11 @@ body {
   padding: 30px;
   display: flex;
   flex-direction: column;
-  align-items:flex-start;
+  justify-content: center;
+  align-items:center;
   gap: 40px;
   background-color: pink;
+  border-radius: 20px;
 }
 
 /* Toggle for rainbow colors */
